--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -37,7 +37,10 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
+      - name: Check formatting
+        run: yarn check-formatting
       - name: Lint
+        run: yarn lint
       - name: Build
         run: yarn build
       - name: Setup Pages
