--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Validate title
-      - uses: deepakputhraya/action-pr-title@master
+        uses: deepakputhraya/action-pr-title@master
         with:
           regex: '^(?:feat|fix|docs|refactor|test|build|ci|chore|revert): .*'
           prefix_case_sensitive: true
