--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-jss": "^10.10.0",
-    "react-redux": "^8.1.0"
+    "react-redux": "^8.1.0",
+    "true": "0.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
