--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pre-Deploy
+name: PR
 
 # Controls when the workflow will run
 on:
@@ -20,12 +20,13 @@ jobs:
         uses: deepakputhraya/action-pr-title@master
         with:
           regex: '^(?:feat|fix|docs|refactor|test|build|ci|chore|revert): .*'
+          allowed_prefixes: 'feat:,fix:,docs:,refactor:,test:,build:,ci:,chore:,revert:'
           prefix_case_sensitive: true
           min_length: 5
           max_length: 80
           
-  init:
-    name: Init
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -47,13 +48,3 @@ jobs:
         run: yarn lint
       - name: Build
         run: yarn build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload dist repository
-          path: './build'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
