--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_BASE_URL=https://bffb-78-90-2-219.eu.ngrok.io
-VITE_SOCKET_URL=https://localhost:7193/gamestatehub
+VITE_BASE_URL=
 VITE_ENABLE_LOGGER=false
