--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "env": { "browser": true, "es2020": true },
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -8,7 +11,10 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "plugins": ["react-refresh", "import"],
   "settings": {
     "import/resolver": {
@@ -18,14 +24,12 @@
   "rules": {
     "no-empty": "off",
     "react-refresh/only-export-components": "warn",
-    // analysis/correctness
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "import/named": "off",
     "import/no-unresolved": "error",
     "import/namespace": "error",
     "import/export": "error",
-    "@typescript-eslint/no-unused-vars": "error",
-    // red flags (thus, warnings)
     "import/no-named-as-default": "warn",
     "import/no-named-as-default-member": "warn",
     "import/no-duplicates": "warn",
