chore: Update README to address the one commit per merge

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
       "typescript": true
     }
   },
+  "ignorePatterns": ["**/*.md"],
   "rules": {
     "no-empty": "off",
     "react-refresh/only-export-components": "warn",
