--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "lint-staged": {
     "**/*": [
-      "prettier --write --ignore-unknown",
+      "prettier --list-different",
       "eslint ."
     ]
   },
